--- a/pom.xml
+++ b/pom.xml
@@ -8,27 +8,47 @@
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>QWAZR Quick-Start</name>
+
     <dependencies>
         <dependency>
             <groupId>com.qwazr</groupId>
             <artifactId>qwazr-server</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <classifier>exec</classifier>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+    <properties>
+        <qwazr.version>1.0.1-SNAPSHOT</qwazr.version>
+    </properties>
     <build>
         <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.4.0</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
                 <configuration>
-                    <executable>java</executable>
-                    <arguments>
-                        <argument>-classpath</argument>
-                        <classpath/>
-                        <argument>com.qwazr.Qwazr</argument>
-                    </arguments>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.qwazr</groupId>
+                <artifactId>qwazr-maven-plugin</artifactId>
+                <version>${qwazr.version}</version>
+                <configuration>
+                    <listenAddr>0.0.0.0</listenAddr>
+                    <services>
+                        <param>webapps</param>
+                        <param>scripts</param>
+                        <param>schedulers</param>
+                        <param>compiler</param>
+                    </services>
+                    <groups>
+                        <param>index</param>
+                    </groups>
+                    <etcFilters>
+                        <param>*.json</param>
+                    </etcFilters>
                 </configuration>
             </plugin>
         </plugins>
