--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,34 @@
     <version>1.0-SNAPSHOT</version>
     <name>QWAZR Quick-Start</name>
 
+    <!-- To use the SNAPSHOT version -->
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </pluginRepository>
+    </pluginRepositories>
+
     <dependencies>
         <dependency>
             <groupId>com.qwazr</groupId>
             <artifactId>qwazr-server</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.qwazr</groupId>
+            <artifactId>qwazr-library</artifactId>
             <version>1.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
@@ -50,6 +74,13 @@
                         <param>*.json</param>
                     </etcFilters>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.qwazr</groupId>
+                        <artifactId>qwazr-library</artifactId>
+                        <version>1.0.1-SNAPSHOT</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
