--- a/pom.xml
+++ b/pom.xml
@@ -9,22 +9,6 @@
     <version>1.0-SNAPSHOT</version>
     <name>QWAZR Quick-Start</name>
 
-    <!-- Uncomment this if you want to use the last snapshot version
-    <pluginRepositories>
-        <pluginRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-        </pluginRepository>
-    </pluginRepositories>
-
-    <repositories>
-        <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-        </repository>
-    </repositories>
-    -->
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -41,6 +25,7 @@
 
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -50,17 +35,21 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>com.qwazr</groupId>
                 <artifactId>qwazr-maven-plugin</artifactId>
                 <version>${qwazr.version}</version>
+
                 <configuration>
                     <listenAddr>0.0.0.0</listenAddr>
+                    <!-- Set which services are activated-->
                     <services>
                         <param>webapps</param>
                         <param>scripts</param>
                         <param>schedulers</param>
                     </services>
+                    <!-- Set which configuration file are used -->
                     <etcFilters>
                         <param>*.json</param>
                     </etcFilters>
@@ -73,6 +62,7 @@
                     </dependency>
                 </dependencies>
             </plugin>
+
         </plugins>
     </build>
 </project>
